# nspanel_haui

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  ROADMAP.md  hacs.json  info.md  mkdocs.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-docs.txt
.github/workflows/: docs.yml  tests.yml  validate.yml
appdaemon/: appdaemon.yaml  apps.yaml
apps/nspanel_haui/: nspanel_haui.py
components/nextion/: base_component.py  nextion.cpp  nextion_base.h  nextion_component.cpp  nextion_upload.cpp  nextion_upload_arduino.cpp  nextion_upload_esp32.cpp
device/: install.yaml  nspanel-haui.yaml  nspanel_haui.yaml  nspanel_haui_dev.yaml  secrets.yaml
docs/: AppDaemon.md  Communication.md  Config.md  CustomIntegration.md  Custom_Integration.md  Design.md  Device.md  ESPHome.md  Example_Config.md  FAQ.md  Hub.md  Install.md  Nextion.md  README.md  cheatsheet.html  communication.md  custom_integration.md  design.md  development.md  device.md  example_config.md  examples.md  faq.md  get-started.md  hub.md  install.md  nextion.md  services.md  troubleshooting.md
docs_/: README.md  device.md
esphome/: README.md  install.yaml  nspanel-haui.yaml  nspanel_haui.yaml  nspanel_haui_dev.yaml  secrets.yaml
nextion/: README.md
scripts/: calc_slider.ipynb  rgb565.ipynb
tests/: conftest.py  test_color.py  test_config.py  test_config_flow.py  test_connection.py  test_device.py  test_device_config.py  test_device_notify.py  test_function_btn.py  test_gesture_suppression.py  test_haui_page.py  test_navigation.py  test_notification.py  test_services.py
(+437 files in other folders)
