[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nspanel-haui"
# Version kept in sync with custom_components/nspanel_haui/manifest.json (source of truth)
version = "0.3.0"
description = "NSPanel HAUI custom integration for Home Assistant"
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/happydasch/nspanel_haui"
Documentation = "https://happydasch.github.io/nspanel_haui/"
Repository = "https://github.com/happydasch/nspanel_haui"
Issues = "https://github.com/happydasch/nspanel_haui/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
mypy_path = "custom_components"
explicit_package_bases = true
namespace_packages = true
files = "custom_components/nspanel_haui/haui"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["S101", "B008"]
